--- a/todo/todo.css
+++ b/todo/todo.css
@@ -1,12 +1,34 @@
+body {
+    background-color: coral;
+}
+
 .inputfield {
     border-radius: 5px;
-    height: 20px;
-    width: 200px;
+    height: 25px;
+    width: 250px;
     color: grey;
+    margin-bottom: 10px;
+    font-size: 20px;
     
 }
 
 .abutton {
     border-radius: 5px;
+    height: 25px;
     background-color:lightgray;
+}
+
+.elements {
+    margin-left: 30px;
+    margin-right: 50px;
+}
+
+.container {
+    font-family: 'Roboto', sans-serif;
+    width: 25%;
+    margin-left: 10%;
+    background-color: white;
+    padding: 20px 10px 20px 10px;
+    border: solid black 1px;
+
 }
