--- a/todo/todo.css
+++ b/todo/todo.css
@@ -5,17 +5,18 @@ body {
 .inputfield {
     border-radius: 5px;
     height: 25px;
-    width: 250px;
+    width: 350px;
     color: grey;
     margin-bottom: 10px;
     font-size: 20px;
-    
 }
 
 .abutton {
     border-radius: 5px;
-    height: 25px;
+    height: auto;
+    width: auto;
     background-color:lightgray;
+    font-size: 20px;
 }
 
 .elements {
@@ -25,10 +26,11 @@ body {
 
 .container {
     font-family: 'Roboto', sans-serif;
-    width: 25%;
+    width: 33%;
     margin-left: 10%;
     background-color: white;
     padding: 20px 10px 20px 10px;
     border: solid black 1px;
 
 }
+
