--- a/todo/todo.css
+++ b/todo/todo.css
@@ -26,7 +26,7 @@ body {
 
 .container {
     font-family: 'Roboto', sans-serif;
-    width: 33%;
+    width: 420px;
     margin-left: 10%;
     background-color: white;
     padding: 20px 10px 20px 10px;
