--- a/cookieclicker/cookie.css
+++ b/cookieclicker/cookie.css
@@ -58,7 +58,7 @@ body {
     width: 49%;
     border: solid;
     border-radius: 10px;
-    height: 520px, auto;
+    height: auto;
     float: right;
     text-align: center;
 }
